# 3DMetricTools

./: 3DMetricTools.cmake  CMakeLists.txt  SuperBuild.cmake
3DErrorMetric/: 3DErrorMetric.cxx  3DErrorMetric.xml  CMakeLists.txt  errorMetric.cxx  errorMetric.xml
3DMeshMetric/: CMakeLists.txt  CMakeLists.txt~  ColormapWidget.cxx  ColormapWidget.h  Launcher.cxx  colorBar.cxx  colorBar.h  dataM.cxx  dataM.h  display.cxx  display.h  doubleClick.cxx  doubleClick.h  gradientWidgetQT.cxx  gradientWidgetQT.h  main.cxx  meshMetric.cxx  meshMetric.xml  meshMetricGui.cxx  meshMetricGui.h  meshMetricGui.ui  meshValmet.cxx  meshValmet.h  processing.cxx  processing.h  vtkOBJWriter.cxx
3DMeshMetric/Testing/: CMakeLists.txt  testData.cxx  testDisplay.cxx  testProcessing.cxx
Doc/: HowToCompile.txt  ReadMe.txt
Libraries/: CMakeLists.txt  MeshValmet.cxx  MeshValmet.h
Libraries/MeshValmet/: 3dmodel.h  compute_error.cxx  compute_error.h  compute_volume_overlap.cxx  compute_volume_overlap.h  geomutils.cxx  geomutils.h  mesh_run.cxx  mesh_run.h  model_analysis.cxx  model_analysis.h  model_in.cxx  model_in.h  read_model.h  reporting.cxx  reporting.h  xalloc.cxx  xalloc.h
ModelToModelDistance/: CMakeLists.txt  ModelToModelDistance.cxx  ModelToModelDistanceMeshValmet.xml.in  ModelToModelDistanceVTK.xml.in
SuperBuild/: External_ITKv4.cmake  External_VTK.cmake
Testing/: CMakeLists.txt
Testing/Data/Baseline/: sphere_distance.vtk
Testing/Data/Input/: sphere.vtk
