# name of the project
PROJECT( errorMetric )

if( Use_VTK_Filter )
  ADD_DEFINITIONS(-DUSE_VTK_FILTER=1)
  set( MeshValmetLib "" )
else()
  set( MeshValmetLib MeshValmetLib )
endif()



SEMMacroBuildCLI(
    NAME errorMetric
    ${STATIC}
    INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${MeshValmetLib_SOURCE_DIRECTORY}
    LINK_DIRECTORIES ${MeshValmetLib_BINARY_DIRECTORY}
    TARGET_LIBRARIES ${MeshValmetLib} ${VTK_LIBRARIES}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
)

#include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${MeshValmetLib_SOURCE_DIRECTORY} )
#link_directories( ${MeshValmetLib_BINARY_DIRECTORY} )
#generateclp( Dsources meshMetric.xml )
#add_executable( errorMetric errorMetric.cxx )
#target_link_libraries( errorMetric MeshValmetLib ${VTK_LIBRARIES} )


